# bear-tennis

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  pyproject.toml  run.sh  setup.py
backend/app/: config.py  db.py  main.py  models.py
backend/app/routes/: orders.py  stats.py  tasks.py  upload.py  xiaocan.py
backend/app/services/: cache.py  importer.py  tasks.py  xiaocan_importer.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: ActualReceivedChart.vue  DailyTrendChart.vue  NaturalTrendChart.vue  OrdersTable.vue  StatsCards.vue  UploadPanel.vue  WeatherClock.vue  XiaocanOrdersTable.vue  XiaocanRebatePanel.vue  XiaocanUploadPanel.vue
frontend/src/views/: DashboardView.vue
scripts/: dev.sh  setup-mysql.sh
