[project]
name = "bearme-coffee-backend"
version = "0.1.0"
description = "Coffee shop order data dashboard - backend (FastAPI + MySQL)"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.2",
    "PyMySQL>=1.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
